--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://bogratz-raanana.github.io/web",
+  "homepage": "https://bogratz-raanana.netlify.app/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -22,6 +22,7 @@
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.11.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
   },
